[package]
name = "jitdump-to-json"
version = "0.1.0"
edition = "2024"

[dependencies]
yaxpeax-arch = { version = "0.3", default-features = false }
yaxpeax-x86 = { version = "2", default-features = false, features = ["std", "fmt"] }
yaxpeax-arm = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
linux-perf-data = "0.11.0"
